# aic

./: .dockerignore  .gitignore  aic_collect.sh  classes_defs.txt  pixi.toml  smolvla_setup_guide.md  test_smolvla_checkpoint.py  test_smolvla_mac.py
aic_example_policies/aic_example_policies/ros/: RunSmolVLA.py
docker/: docker-compose-test.yaml  docker-compose.yaml
docker/izus_model/: Dockerfile  supervisord.conf
docker/team_policy/: Dockerfile
docs/: planning_team.md
izus_policy/: INFER.md  package.xml  setup.cfg  setup.py
izus_policy/izus_policy/: run_hybrid.py
izus_policy/izus_policy/perception/: __init__.py  yolov12_detector.py
team_policy/: aic.rviz  fastdds_no_shm.xml  package.xml  pixi.toml  setup.cfg  setup.py
team_policy/team_policy/: DEPLOY_ACT.md  RUN_ACT_USAGE.md  RunSmolVLA_63d.py  cad_plug_projection.py  camera_geometry.py  download_metric_indoor_model.py  launch_act_trial.sh  launch_trial.sh  multicam_ibvs.py  mypolicy.py  mypolicy_lerobot.py  pixel_correction.py  port_mouth_refiner.py  run_act.py  run_act_v2.py  run_act_v3.py  run_hybrid.py  run_smolvla.py  runact1.txt  scratch_test.py  strip_lerobot_state_77d_to_63d.py  train_feature_vs.py
team_policy/team_policy/Data_Collection/: .flatten_dataset.py.swp  flatten_dataset.py  image_snapshot.py
team_policy/team_policy/Depth/: __init__.py  stereo_center_depth.py  test_depth_publisher.py  test_stereo_center_depth.py
team_policy/team_policy/perception/: __init__.py  cad_depth_registration.py  (+11 more)
team_policy/test/: test_run_act.py  test_sfp_alignment_lines.py  test_trained_model_v2_smoke.py
(+242 files in other folders)
