<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>izus_policy</name>
  <version>0.0.1</version>
  <description>IZUS System policy package for the AI for Industry Challenge</description>
  <maintainer email="ujjwalpatil20@gmail.com">Ujjwal Patil</maintainer>
  <license>Apache-2.0</license>

  <depend>aic_control_interfaces</depend>
  <depend>aic_model</depend>
  <depend>aic_model_interfaces</depend>
  <depend>aic_task_interfaces</depend>
  <depend>ament_index_python</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
